# JSY-MK-194-rs

./: .gitignore  .mega-linter.yaml  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yaml  pull_request-template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-build.yaml  dependabot.yaml  mega-linter.yaml  release-plz.yaml
docs/: user-manual.md
examples/: README.md  addresses.rs  getters.rs  power_loop_example.rs  registers.rs  response_delay.rs  setters.rs  tokio.rs
examples/esp32c3/: Cargo.toml  rust-toolchain.toml
examples/rp2040/: Cargo.toml
examples/rp2040/.cargo/: config.toml
examples/rp2040/src/: main.rs
examples/stm32f103/: Cargo.toml
examples/stm32f103/.cargo/: config.toml
examples/stm32f103/src/: adapter.rs  main.rs
src/: delay.rs  error.rs  getters.rs  jsy_mk_194g.rs  lib.rs  modbus.rs  modubus.rs  registers.rs  setters.rs  types.rs  units.rs
src/modbus/: buffer_communications.rs  communications.rs  constants.rs  multi_register_communications.rs  offsets.rs  protocol.rs  register_communications.rs  requests.rs  responses.rs  types.rs
src/modubus/: communications.rs  types.rs
src/registers/: channel_one_measuring_electrical_paramaters.rs  channel_one_measuring_electrical_parameters.rs  channel_two_measuring_electrical_paramaters.rs  channel_two_measuring_electrical_parameters.rs  electrical_paramater_registers.rs  macros.rs  measuring_electrical_paramaters.rs  misc_registers.rs  scalars.rs  system_configuration_paramater.rs  system_configuration_parameter.rs  system_paramaters.rs  system_parameters.rs  traits.rs
tests/: active_energy_register_tests.rs  channel_read_register_tests.rs  channel_read_tests.rs  getter_tests.rs  misc_registers_tests.rs  registers.rs  setters_tests.rs  system_configuration_register_tests.rs  system_paramater_register_tests.rs
tests/common/: mod.rs
utils/: Cargo.toml
utils/src/: lib.rs
