[package]
name = "jsy-mk-194-rs"
version = "0.0.0"
edition = "2024"
authors = ["Scott Gibb <ssmgibb@yahoo.com>"]
description = "A Rust driver for the JSY MK-194 power monitor IC, supporting both synchronous and asynchronous operation modes."
license = "Apache-2.0"
repository = "https://github.com/ScottGibb/jsy-mk-194-rs"
rust-version = "1.85.1"

[features]
default = ["std-sync"]

# Required embedded-hal for the Delay construct
std-sync = ["maybe-async/is_sync", "dep:embedded-hal"]


sync = ["maybe-async/is_sync", "dep:embedded-io", "dep:embedded-hal"]
async = ["dep:embedded-io-async", "dep:embedded-hal-async"]
defmt = ["dep:defmt"]
advanced = []

[dependencies]
maybe-async = "0.2"
uom = { version = "0.38", default-features = false, features = [
    "autoconvert",
    "si",
    "f32",
] }
visibility = "0.1"

embedded-io = { version = "0.7", optional = true }
embedded-io-async = { version = "0.7", optional = true }
defmt = { version = "1", optional = true }
embedded-hal = { version = "1", optional = true }
embedded-hal-async = { version = "1", optional = true }

[dev-dependencies]
serialport = "4.9.0"
utils = { path = "./utils" }
