[package]
name = "jsy-mk-194-rs"
version = "0.1.2"
edition = "2024"
authors = ["Scott Gibb <ssmgibb@yahoo.com>"]
description = "A Rust driver for the JSY MK-194 power monitor IC, supporting both synchronous and asynchronous operation modes."
license = "Apache-2.0"
repository = "https://github.com/ScottGibb/jsy-mk-194-rs"
rust-version = "1.85.1"
keywords = [
    "embedded",
    "driver",
    "power-monitor",
    "jsy-mk-194",
    "async",
    "sync",
    "no-std",
    "tokio",
]

[package.metadata.docs.rs]
features = ["std-sync"]

[features]
default = ["std-sync"]

# Required embedded-hal for the Delay construct
std-sync = ["maybe-async/is_sync", "dep:embedded-hal"]
tokio-async = ["dep:embedded-hal-async", "dep:tokio"]

sync = ["maybe-async/is_sync", "dep:embedded-io", "dep:embedded-hal"]
async = ["dep:embedded-io-async", "dep:embedded-hal-async"]
defmt = ["dep:defmt"]
advanced = []                                                         # Used to enable Register Access

[dependencies]
uom = { version = "0.38", default-features = false, features = [
    "autoconvert",
    "si",
    "f32",
] }
visibility = "0.1"
defmt = { version = "1", optional = true }
maybe-async = "0.2"

# Sync HAL
embedded-hal = { version = "1", optional = true }
embedded-io = { version = "0.7", optional = true }

# Async HAL
embedded-hal-async = { version = "1", optional = true }
embedded-io-async = { version = "0.7", optional = true }

# Std Deps
tokio = { version = "1", features = ["io-util", "time"], optional = true }

[dev-dependencies]
# Serial Ports
serialport = "4"
tokio-serial = "5"
tokio = { version = "1", features = ["full"] }
