[package]
edition = "2024"
name = "esp32c3"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esp32c3"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1", features = ["defmt", "esp32c3", "unstable"] }

esp-rtos = { version = "0.2", features = ["defmt", "embassy", "esp32c3"] }

defmt = "1"
esp-bootloader-esp-idf = { version = "0.4", features = ["defmt", "esp32c3"] }

embassy-executor = { version = "0.9", features = ["defmt"] }
embassy-time = { version = "0.5", features = ["defmt"] }
rtt-target = { version = "0.6", features = ["defmt"] }

critical-section = "1"
static_cell = "2"

# Library

jsy-mk-194-rs = { path = "../../", features = [
    "async",
    "defmt",
], default-features = false }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
